--- a/app/views/admin/admin/images/_picture_fields.html.erb
+++ b/app/views/admin/admin/images/_picture_fields.html.erb
@@ -4,7 +4,13 @@
 		<td>
 			<%= image_tag f.object.image_url(:thumb) -%>
 		</td>
-		<td>
+		<td class="small">
+			<%= link_to 'Insert Image', '#' -%>
+		</td>
+		<td class="small">
+			<%= link_to 'Copy Link', root_url+f.object.image_url -%>
+		</td>
+		<td class="text-right">
 			<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger btn-xs' %>
 		</td>
 
@@ -16,7 +22,9 @@
 			<%= f.hidden_field :imageable_type -%>
 			<%= f.file_field :image -%>
 		</td>
-		<td>
+		<td></td>
+		<td></td>
+		<td class="text-right">
 			<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger btn-xs' %>
 		</td>
 
