--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -14,7 +14,7 @@
 			<% @events.each do |event| %>
 			<tr>
 				<td><%= event.title -%></td>
-				<td><%= event.venue -%></td>
+				<td><%#= event.venue -%></td>
 				<td><%= event.date_span -%></td>
 			</tr>
 			<% end -%>
