--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -42,7 +42,7 @@
 			<% @destinations.each do |destination| %>
 			<tr>
 				<td><%= link_to destination.name, destination -%></td>
-				<td><%= '0' -%></td>
+				<td><%= destination.casinos.count -%></td>
 			</tr>
 			<% end %>
 		</tbody>
