--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,12 @@ body {
 
 	// font-family: 'Open Sans';
 }
+
+.gmap {
+	width: 100%;
+	height: 260px;
+	background: #58B;
+}
  
 /*@media (max-width: 768px) {
 	body { padding-top: 51px; }
