--- a/app/views/admin/casinos/_form.html.erb
+++ b/app/views/admin/casinos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @casino] do |f| %>
+<%= form_for [:admin, @casino], html: {multipart: true} do |f| %>
   <% if @casino.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@casino.errors.count, "error") %> prohibited this casino from being saved:</h2>
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+
 
   <div class="field">
     <%= f.label :name %><br>
@@ -33,8 +34,9 @@
   </div>
   <div class="field">
     <%= f.label :content %><br>
-    <%= f.text_area :content %>
+    <%= f.text_area :content, class: 'froala_content' %>
   </div>
+  <%= render 'admin/admin/images/pictures_upload', f: f -%>
   <div class="actions">
     <%= f.submit %>
   </div>
