--- a/app/views/admin/ports/_form.html.erb
+++ b/app/views/admin/ports/_form.html.erb
@@ -18,20 +18,16 @@
 	<%= f.text_field :name %>
 </div>
 <div class="field">
+	<%= f.label :slug %><br>
+	<%= f.text_field :slug %>
+</div>
+<div class="field">
 	<%= f.label :content %><br>
 	<%= f.text_area :content, class: 'froala_content' %>
 </div>
 <div class="field">
 	<%= f.label :location %><br>
 	<%= f.text_field :location %>
-</div>
-<div class="field">
-	<%= f.label :latitude %><br>
-	<%= f.text_field :latitude %>
-</div>
-<div class="field">
-	<%= f.label :longitude %><br>
-	<%= f.text_field :longitude %>
 </div>
 
 <div class="actions">
