--- a/app/views/casinos/index.html.erb
+++ b/app/views/casinos/index.html.erb
@@ -1,36 +1,41 @@
+<section class="parallax" style="background-image: url('<%= image_url('bg-hotel-room.jpg') -%>');">
+	<div class="jumbotron">
+		<div class="container text-center">
+			<h1>Casinos</h1>
+		</div>
+	</div>
+</section>
 
-<h1>Listing Casinos</h1>
+<div class="container">
+	<span class="divider"></span>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Slug</th>
-      <th>Address</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+	<div class="table-responsive">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Destination</th>
+				</tr>
+			</thead>
 
-  <tbody>
-    <% @casinos.each do |casino| %>
-      <tr>
-        <td><%= casino.name %></td>
-        <td><%= casino.slug %></td>
-        <td><%= casino.address %></td>
-        <td><%= casino.latitude %></td>
-        <td><%= casino.longitude %></td>
-        <td><%= casino.content %></td>
-        <td><%= link_to 'Show', casino %></td>
-        <td><%#= link_to 'Edit', edit_casino_path(casino) %></td>
-        <td><%#= link_to 'Destroy', casino, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+			<tbody>
+				<% @casinos.each do |casino| %>
+				<tr>
+					<td><%= link_to casino.name, casino %></td>
+					<td>
+					<% casino.destinations.each do |dest| %>
+					<%= link_to dest.name, dest -%>
+					<% end -%>
+					</td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
 
-<br>
+	<% if is_admin? -%>
+	<hr>
+	<%= link_to 'New Casino', new_admin_casino_path -%>
+	<% end -%>
 
-<%#= link_to 'New Casino', new_casino_path %>
+</div>
