--- a/app/views/casinos/show.html.erb
+++ b/app/views/casinos/show.html.erb
@@ -1,44 +1,46 @@
+<div class="container">
 
-  <% @casino.destinations.each do |dest| -%>
-  <p>
-  <%= link_to dest.name, dest -%>
-  <%= dest.distance.round(2) -%>
-  </p>
-  <% end -%>
+	<div class="page-header">
+		<h1>
+			<%= @casino.name %>
+		</h1>
+	</div>
 
+	<div class="row">
 
-<p>
-  <strong>Name:</strong>
-  <%= @casino.name %>
-</p>
+		<div class="col-sm-8 col-sm-push-4">
+			<%= @casino.rendered_content %>
+		</div>
+		<div class="col-sm-4 col-sm-pull-8">
 
-<p>
-  <strong>Slug:</strong>
-  <%= @casino.slug %>
-</p>
+			<% if @casino.first_image -%>
+			<div class="thumbnail">
+				<%= image_tag @casino.first_image -%>
+			</div>
+			<% end -%>
 
-<p>
-  <strong>Address:</strong>
-  <%= @casino.address %>
-</p>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Casino Information</h3>
+				</div>
+				<div class="panel-body">
+					<%= content_tag :div, nil, id: 'casinoMap', class: 'gmap', data: {lat: @casino.latitude, lng: @casino.longitude} -%>
+				</div>
+				<div class="list-group">
+					<% @casino.destinations.each do |dest| -%>
+					<%= link_to dest.name, dest, class: 'list-group-item' -%>
+					<% end -%>
+				</div>
+			</div>
 
-<p>
-  <strong>Latitude:</strong>
-  <%= @casino.latitude %>
-</p>
+		</div>
 
-<p>
-  <strong>Longitude:</strong>
-  <%= @casino.longitude %>
-</p>
+	</div>
 
-<p>
-  <strong>Content:</strong>
-  <%= @casino.content %>
-</p>
+	<% if is_admin? -%>
+	<hr>
+	<%= link_to 'Edit', edit_admin_casino_path(@casino) %> |
+	<%= link_to 'Back', admin_casinos_path %>
+	<% end -%>
 
-<% if is_admin? -%>
-<hr>
-<%= link_to 'Edit', edit_admin_casino_path(@casino) %> |
-<%= link_to 'Back', admin_casinos_path %>
-<% end -%>
+</div>
