--- a/app/views/cruises/show.html.erb
+++ b/app/views/cruises/show.html.erb
@@ -6,49 +6,69 @@
 		</h1>
 	</div>
 
-	<p>
-		<strong>Pics:</strong>
-		<% @cruise.pictures.each do |pic| %>
-		<%= image_tag pic.image_url(:thumb) -%>
-		<% end -%>
-	</p>
-
 	<div class="row">
 
-		<div class="col-sm-12">
+		<div class="col-md-8 col-md-push-4 col-sm-7 col-sm-push-5">
 
-			<div class="col-sm-4 lead">
-				<%= @cruise.rendered_content %>
+			<% unless @cruise.content.blank? -%>
+			<%= @cruise.rendered_content %>
+			<hr>
+			<% end -%>
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Ports of Call</h3>
+				</div>
+				<div class="panel-body">
+					<div id="portsMap" class="gmap"></div>
+				</div>
+				<div class="table-responsive">
+					<table class="table table-striped table-condensed">
+						<thead>
+							<tr>
+								<th>Port</th>
+								<th>Arrive</th>
+								<th>Depart</th>
+							</tr>
+						</thead>
+						<tbody>
+							<% @cruise.port_of_calls.each_with_index do |poc, index| -%>
+
+							<%= content_tag :tr, class: 'port', data: {lat: poc.port.latitude, lng: poc.port.longitude, index: index} do -%>
+							<td><%= link_to poc.port.name, poc.port -%></td>
+							<td><%= poc == @cruise.port_of_calls.first ? '-' : poc.arrives_at -%></td>
+							<td><%= poc == @cruise.port_of_calls.last ? '-' : poc.departs_at -%></td>
+							<% end -%>
+
+							<% end -%>
+						</tbody>
+					</table>
+				</div>
 			</div>
-			<div class="col-sm-8">
-				<div class="well">
-					<%= @cruise.attributes -%>
+		</div>
+
+		<div class="col-md-4 col-md-pull-8 col-sm-5 col-sm-pull-7">
+
+			<div class="thumbnail">
+				<% if @cruise.first_image -%>
+				<%= link_to image_tag(@cruise.first_image), '#', data: {toggle: :modal, target: '#pictureGallery'} -%>
+				<%= render 'layouts/pictures/gallery_modal', instance: @cruise -%>
+				<% else -%>
+				default cruise image
+				<% end -%>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Cruise Line Details</h3>
+				</div>
+				<div class="panel-body">
+					venue info
 				</div>
 			</div>
 
 		</div>
 
-	</div>
-
-	<div class="table-responsive">
-		<table class="table table-striped table-condensed">
-			<thead>
-				<tr>
-					<th>Port</th>
-					<th>Arrive</th>
-					<th>Depart</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @cruise.port_of_calls.each do |poc| -%>
-				<tr>
-					<td><%= link_to poc.port.name, poc.port -%></td>
-					<td><%= poc == @cruise.port_of_calls.first ? '-' : poc.arrives_at -%></td>
-					<td><%= poc == @cruise.port_of_calls.last ? '-' : poc.departs_at -%></td>
-				</tr>
-				<% end -%>
-			</tbody>
-		</table>
 	</div>
 
 	<% if is_admin? -%>
