--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,10 +7,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Casinos TGC</a>
+			<a class="navbar-brand visible-lg visible-xs" href="/">Casinos TGC</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
+
+				<%= content_tag :li, link_to(fa_icon('home')+'Home', root_url), class: 'hidden-lg' -%>
 
 				<% MenuItem.all.each do |item| -%>
 				<%= content_tag :li, link_to(fa_icon(item.icon)+item.value, item.link, target: (item.blank_target ? '_blank' : '_self')) -%>
