--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,10 +27,10 @@
 
 		<div class="row">
 			
-			<div class="col-sm-3">
+			<div class="col-sm-4 col-md-3">
 				<%= render 'admin/admin/nav' -%>
 			</div>
-			<div class="col-sm-9">
+			<div class="col-sm-8 col-md-9">
 				<%= yield %>
 			</div>
 
