--- a/app/views/cruises/show.html.erb
+++ b/app/views/cruises/show.html.erb
@@ -63,7 +63,7 @@
 					<h3 class="panel-title">Cruise Line Details</h3>
 				</div>
 				<div class="panel-body">
-					venue info
+					<%= link_to @cruise.venue.name, @cruise.venue -%>
 				</div>
 			</div>
 
