--- a/app/views/admin/admin/_nav.html.erb
+++ b/app/views/admin/admin/_nav.html.erb
@@ -23,7 +23,8 @@
 			<%= content_tag :li, link_to('Events', admin_events_path) -%>
 			<%= content_tag :li, link_to('Cruises', admin_cruises_path) -%>
 			<%= content_tag :li, link_to('Ports', admin_ports_path) -%>
-			<%= content_tag :li, link_to('Venues', '#venues') -%>
+			<%= content_tag :li, link_to('Venues', admin_venues_path) -%>
+			<%#= content_tag :li, link_to('Ships', '#admin_ships_path') -%>
 			<hr>
 			<%= content_tag :li, link_to('Flights', admin_flights_path) -%>
 
