--- a/app/views/flights/_search.html.erb
+++ b/app/views/flights/_search.html.erb
@@ -1,10 +1,12 @@
 <%= search_form_for @flights_q, url: flights_path do |f| %>
 
 <p>
-	<%= f.select :departing_at_date_equals, options_for_select(Flight.unique_dates), {prompt: 'Departing Date'}, {class: 'form-control'} %>
+	<%#= f.select :departing_at_date_equals, options_for_select(Flight.unique_dates), {prompt: 'Departing Date'}, {class: 'form-control'} %>
+	<%= f.collection_select :departing_airport_eq, Flight.select(:departing_airport).uniq.sort, :departing_airport, :departing_airport, {prompt: 'Departing Date'}, {class: 'form-control'} -%>
 </p>
 <p>
-	<%= f.select :destination_name_cont, options_for_select(Flight.available_destinations), {prompt: 'Destination'}, {class: 'form-control'} -%>
+	<%#= f.select :destination_name_cont, options_for_select(Flight.available_destinations), {prompt: 'Destination'}, {class: 'form-control'} -%>
+	<%= f.collection_select :departing_airport_eq, Flight.select(:departing_airport).uniq.sort, :departing_airport, :departing_airport, {prompt: 'Destination'}, {class: 'form-control'} -%>
 </p>
 
 <p>
