--- a/app/views/admin/admin/images/_pictures_upload.html.erb
+++ b/app/views/admin/admin/images/_pictures_upload.html.erb
@@ -1,6 +1,6 @@
 <!-- Button trigger modal -->
 <p>
-	<button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#myModal">
+	<button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#pictureManagerModal">
 		Manage Pictures
 	</button>
 </p>
@@ -11,12 +11,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="pictureManagerModal" tabindex="-1" role="dialog" aria-labelledby="pictureManagerModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="myModalLabel">Pictures</h4>
+				<h4 class="modal-title" id="pictureManagerModalLabel">Pictures</h4>
 			</div>
 			<div class="modal-body">
 				<div class="table-responsive">
