--- a/app/views/admin/cruises/index.html.erb
+++ b/app/views/admin/cruises/index.html.erb
@@ -1,34 +1,31 @@
 <h1>Listing cruises</h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Slug</th>
-      <th>Content</th>
-      <th>Start at</th>
-      <th>End at</th>
-      <th>Venue</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="table-responsive">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>Title</th>
+				<th>Start at</th>
+				<th>End at</th>
+				<th>Venue</th>
+				<th colspan="3"></th>
+			</tr>
+		</thead>
 
-  <tbody>
-    <% @cruises.each do |cruise| %>
-      <tr>
-        <td><%= cruise.title %></td>
-        <td><%= cruise.slug %></td>
-        <td><%= cruise.content %></td>
-        <td><%= cruise.start_at %></td>
-        <td><%= cruise.end_at %></td>
-        <td><%#= cruise.venue %></td>
-        <td><%= link_to 'Show', cruise %></td>
-        <td><%= link_to 'Edit', edit_admin_cruise_path(cruise) %></td>
-        <td><%= link_to 'Destroy', [:admin, cruise], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+		<tbody>
+			<% @cruises.each do |cruise| %>
+			<tr>
+				<td><%= link_to cruise.title, edit_admin_cruise_path(cruise) %></td>
+				<td><%= cruise.start_at %></td>
+				<td><%= cruise.end_at %></td>
+				<td><%= link_to cruise.venue.name, cruise.venue %></td>
+				<td><%= link_to 'Show', cruise %></td>
+				<td><%= link_to 'Destroy', [:admin, cruise], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
 
 <br>
 
