--- a/app/views/admin/menu_items/_form.html.erb
+++ b/app/views/admin/menu_items/_form.html.erb
@@ -1,44 +1,52 @@
 <%= form_for [:admin, @menu_item] do |f| %>
 <% if @menu_item.errors.any? %>
 <div id="error_explanation">
-  <h2><%= pluralize(@menu_item.errors.count, "error") %> prohibited this menu_item from being saved:</h2>
+	<h2><%= pluralize(@menu_item.errors.count, "error") %> prohibited this menu_item from being saved:</h2>
 
-  <ul>
-    <% @menu_item.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
+	<ul>
+		<% @menu_item.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
 </div>
 <% end %>
 
 <div class="form-group">
-  <%= f.label :value, 'Label' %><br>
-  <%= f.text_field :value, class: 'form-control' %>
+	<%= f.label :value, 'Label' %><br>
+	<%= f.text_field :value, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :page_id, 'Link To' %>
-  <%= f.collection_select :page_id, @pages, :id, :title, {include_blank: '- Custom URL'}, class: 'form-control' -%>
+	<%= f.label :page_id, 'Link To' %>
+	<%= f.collection_select :page_id, @pages, :id, :title, {include_blank: '- Custom URL'}, class: 'form-control' -%>
 
 </div>
 
 <div class="form-group">
-  <%= f.label :href, 'Custom URL' %>
-  <%= f.text_field :href, class: 'form-control', disabled: true %>
+	<%= f.label :href, 'Custom URL' %>
+	<%= f.text_field :href, class: 'form-control', disabled: true %>
 </div>
 
 <div class="checkbox">
-    <label>
-      <%= f.check_box :blank_target -%> Open link in new window?
-    </label>
-  </div>
+	<label>
+		<%= f.check_box :blank_target -%> Open link in new window?
+	</label>
+</div>
 
 <div class="form-group">
-  <%= f.label :icon %>
-  <%= f.select :icon, @icons, {}, {class: 'form-control'} -%>
+	<%= f.label :icon %>
+	<div class="input-group">
+		<span class="input-group-addon" id="basic-addon1">
+			<i id="iconPreview" class="fa fa-fw fa-<%= @menu_item.icon.present? ? @menu_item.icon : @icons.first -%>"></i>
+		</span>
+		<%= f.select :icon, @icons, {}, {class: 'form-control'} -%>
+	</div>
+	<span class="help-block pull-right">
+		<%= link_to 'Icon List', 'http://fortawesome.github.io/Font-Awesome/icons/', target: '_blank' -%>
+	</span>
 </div>
 
 <div class="actions">
-  <%= f.submit %>
+	<%= f.submit %>
 </div>
 <% end %>
