--- a/app/views/admin/ports/index.html.erb
+++ b/app/views/admin/ports/index.html.erb
@@ -1,34 +1,27 @@
 <h1>Listing ports</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Slug</th>
-      <th>Content</th>
-      <th>Location</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="table-responsive">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Location</th>
+				<th colspan="2"></th>
+			</tr>
+		</thead>
 
-  <tbody>
-    <% @ports.each do |port| %>
-      <tr>
-        <td><%= port.name %></td>
-        <td><%= port.slug %></td>
-        <td><%= port.content %></td>
-        <td><%= port.location %></td>
-        <td><%= port.latitude %></td>
-        <td><%= port.longitude %></td>
-        <td><%= link_to 'Show', port %></td>
-        <td><%= link_to 'Edit', edit_admin_port_path(port) %></td>
-        <td><%= link_to 'Destroy', port, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+		<tbody>
+			<% @ports.each do |port| %>
+			<tr>
+				<td><%= link_to port.name, edit_admin_port_path(port) %></td>
+				<td><%= port.location %></td>
+				<td><%= link_to 'Show', port %></td>
+				<td><%= link_to 'Destroy', [:admin, port], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
 
 <br>
 
