--- a/app/views/flights/_search.html.erb
+++ b/app/views/flights/_search.html.erb
@@ -32,6 +32,6 @@
 	</select>
 </p>
 
-<button type="submit" class="btn btn-primary btn-lg btn-block">Find Flight <%= fa_icon('plane') -%></button>
+<button type="submit" class="btn btn-info btn-lg btn-block">Find Flights <%= fa_icon('plane') -%></button>
 
 <% end %>
