--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -12,11 +12,11 @@
 
 	<div class="row">
 
-		<div class="col-sm-3 well">
+		<div class="col-sm-4 col-md-3 well">
 			<%= render 'flights/search' -%>
 			<%#= link_to 'Reset', flights_path, class: 'btn btn-default btn-sm btn-block' -%>
 		</div>
-		<div class="col-sm-9">
+		<div class="col-sm-8 col-md-9">
 
 			<div class="table-responsive">
 				<table class="table table-striped">
