land typo in seed file

--- a/app/views/casinos/index.html.erb
+++ b/app/views/casinos/index.html.erb
@@ -1,4 +1,4 @@
-<section class="parallax" style="background-image: url('<%= image_url('bg-hotel-room.jpg') -%>');">
+<section class="parallax" style="background-image: url('<%= image_url('bg-roulette.jpg') -%>');">
 	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>Casinos</h1>
