--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -12,7 +12,8 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 
-				<%= content_tag :li, link_to(fa_icon('home')+'Home', root_url), class: 'hidden-' -%>
+				<%= content_tag :li, link_to(fa_icon('home')+' Home', root_url), class: 'hidden-' -%>
+				<%= content_tag :li, link_to(fa_icon('plane')+' Flights', flights_path) -%>
 
 				<%# MenuItem.all.each do |item| -%>
 				<%#= content_tag :li, link_to(fa_icon(item.icon)+item.value, item.link, target: (item.blank_target ? '_blank' : '_self')) -%>
@@ -20,6 +21,6 @@
 
 			</ul>
 
-		</div><!--/.nav-collapse -->
+		</div>
 	</div>
-</div>
+</nav>
