--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -107,7 +107,7 @@
 			<div class="col-sm-6 col-sm-pull-6">
 				<h4>Browse by Date, Destination or Departing City</h4>
 
-				<%#= render 'flights/search' -%>
+				<%= render 'flights/search' -%>
 
 			</div>
 		</div>
