--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,39 +1,66 @@
-<p id="notice"><%= notice %></p>
+<section class="parallax" style="background-image: url('<%= image_url('bg-roulette.jpg') -%>');">
+	<div class="jumbotron">
+		<div class="container text-center">
+			<h1>Destinations</h1>
+		</div>
+	</div>
+</section>
 
-<h1>Listing Destinations</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Slug</th>
-      <th>Content</th>
-      <th>Location</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>International</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @destinations.each do |destination| %>
-      <tr>
-        <td><%= destination.name %></td>
-        <td><%= destination.slug %></td>
-        <td><%= destination.content %></td>
-        <td><%= destination.location %></td>
-        <td><%= destination.latitude %></td>
-        <td><%= destination.longitude %></td>
-        <td><%= destination.international %></td>
-        <td><%= link_to 'Show', destination %></td>
-        <td><%= link_to 'Edit', edit_destination_path(destination) %></td>
-        <td><%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<span class="divider"></span>
 
-<br>
+<div class="container">
 
-<%= link_to 'New Destination', new_destination_path %>
+	<div class="row">
+		<% #Destination.featured.each do |destination| -%>
+
+		<div class="col-sm-6 col-md-3">
+			<div class="thumbnail auto-height" style="">
+				<a class="destination-thumb" href="<%#= destination_path(destination) -%>" style="display: block; height: 150px; background: url('<%#= destination.pictures.first.image_url -%>') center center; background-size: cover;"></a>
+				<div class="caption">
+					<h4>
+					<%#= destination.name -%>
+						<!-- <br><small>Theme Park</small> -->
+					</h4>
+				</div>
+			</div>
+		</div>
+
+		<%# end -%>
+	</div>
+
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>Destination</th>
+				<th>Casinos</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<% @destinations.each do |destination| %>
+			<tr>
+				<td><%= link_to destination.name, destination -%></td>
+				<td class="small">
+				<ul class="list-inline">
+				<%# destination.casinos.each do |casino| -%>
+				<%#= content_tag :li, link_to(casino.name, casino) -%>
+				<%# end -%>
+				</ul>
+				</td>
+
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+
+	<div class="pagination-container text-center">
+		<%= paginate @destinations %>
+	</div>
+
+	<% if is_admin? -%>
+	<hr>
+	<%= link_to 'New Destination', new_admin_destination_path %>
+	<% end -%>
+</div>
