--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@flight) do |f| %>
+<%= form_for [@flight] do |f| %>
   <% if @flight.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@flight.errors.count, "error") %> prohibited this flight from being saved:</h2>
@@ -11,37 +11,25 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :destination_id %><br>
-    <%= f.text_field :destination_id %>
+  <div class="form-group">
+    <%= f.label :departing_airport %>
+    <%= f.text_field :departing_airport, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :departing_location %><br>
-    <%= f.text_area :departing_location %>
+  <div class="form-group">
+    <%= f.label :departing_at %>
+    <%= f.datetime_select :departing_at, {}, class: '' %>
   </div>
-  <div class="field">
-    <%= f.label :arriving_location %><br>
-    <%= f.text_area :arriving_location %>
+  <div class="form-group">
+    <%= f.label :arriving_airport %>
+    <%= f.text_field :arriving_airport, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :departing_at %><br>
-    <%= f.datetime_select :departing_at %>
+  <div class="form-group">
+    <%= f.label :arriving_at %>
+    <%= f.datetime_select :arriving_at, {}, class: '' %>
   </div>
-  <div class="field">
-    <%= f.label :arriving_at %><br>
-    <%= f.datetime_select :arriving_at %>
-  </div>
-  <div class="field">
-    <%= f.label :departing_airport %><br>
-    <%= f.text_field :departing_airport %>
-  </div>
-  <div class="field">
-    <%= f.label :arriving_airport %><br>
-    <%= f.text_field :arriving_airport %>
-  </div>
-  <div class="field">
-    <%= f.label :flight_number %><br>
-    <%= f.text_field :flight_number %>
+  <div class="form-group">
+    <%= f.label :flight_number %>
+    <%= f.text_field :flight_number, class: 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
