--- a/app/views/flights/_search.html.erb
+++ b/app/views/flights/_search.html.erb
@@ -1,35 +1,13 @@
 <%= search_form_for @flights_q, url: flights_path do |f| %>
 
 <p>
-	<%#= f.select :departing_at_date_equals, options_for_select(Flight.unique_dates), {prompt: 'Departing Date'}, {class: 'form-control'} %>
-	<select class="form-control">
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-	</select>
+	<%= f.select :departing_at_eq, options_for_select(Flight.unique_dates), {include_blank: 'Departing Date'}, {class: 'form-control'} %>
 </p>
 <p>
-	<%#= f.select :destination_name_cont, options_for_select(Flight.available_destinations), {prompt: 'Destination'}, {class: 'form-control'} -%>
-	<select class="form-control">
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-	</select>
+	<%= f.select :destination_name_cont, options_for_select(Flight.available_destinations), {include_blank: 'Destination'}, {class: 'form-control'} -%>
 </p>
-
 <p>
-	<%#= f.collection_select :departing_airport_eq, Flight.select(:departing_airport).uniq.sort, :departing_airport, :departing_airport, {prompt: 'Departing Airport'}, {class: 'form-control'} -%>
-	<select class="form-control">
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-	</select>
+	<%= f.select :departing_airport_eq, options_for_select(Flight.departing_airports), {include_blank: 'Departing Airport'}, {class: 'form-control'} -%>
 </p>
 
 <button type="submit" class="btn btn-info btn-lg btn-block">Find Flights <%= fa_icon('plane') -%></button>
