--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -30,5 +30,5 @@
   <%= @flight.flight_number %>
 </p>
 
-<%= link_to 'Edit', edit_admin_flight_path(@flight) %> |
-<%= link_to 'Back', admin_flights_path %>
+<%= link_to 'Edit', edit_flight_path(@flight) %> |
+<%= link_to 'Back', flights_path %>
