--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,12 +12,11 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 
-				<%= content_tag :li, link_to(fa_icon('home')+' Home', root_url), class: 'hidden-' -%>
-				<%= content_tag :li, link_to(fa_icon('plane')+' Flights', flights_path) -%>
+				<%= content_tag :li, link_to(fa_icon('home')+' Home', root_url), class: 'hidden-lg' -%>
 
-				<%# MenuItem.all.each do |item| -%>
-				<%#= content_tag :li, link_to(fa_icon(item.icon)+item.value, item.link, target: (item.blank_target ? '_blank' : '_self')) -%>
-				<%# end -%>
+				<% Admin::MenuItem.all.each do |item| -%>
+				<%= content_tag :li, link_to(fa_icon(item.icon)+" #{item.text}", item.link, target: (item.blank_target ? '_blank' : '_self')) -%>
+				<% end -%>
 
 			</ul>
 
