--- a/app/views/admin/casinos/_form.html.erb
+++ b/app/views/admin/casinos/_form.html.erb
@@ -1,15 +1,16 @@
-<%= form_for(@destination) do |f| %>
-  <% if @destination.errors.any? %>
+<%= form_for [:admin, @casino], html: {multipart: true} do |f| %>
+  <% if @casino.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@destination.errors.count, "error") %> prohibited this destination from being saved:</h2>
+      <h2><%= pluralize(@casino.errors.count, "error") %> prohibited this casino from being saved:</h2>
 
       <ul>
-      <% @destination.errors.full_messages.each do |message| %>
+      <% @casino.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
+
 
   <div class="field">
     <%= f.label :name %><br>
@@ -20,12 +21,8 @@
     <%= f.text_field :slug %>
   </div>
   <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
   </div>
   <div class="field">
     <%= f.label :latitude %><br>
@@ -36,9 +33,10 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="field">
-    <%= f.label :international %><br>
-    <%= f.check_box :international %>
+    <%= f.label :content %><br>
+    <%= f.text_area :content, class: 'froala_content' %>
   </div>
+  <%= render 'admin/admin/images/pictures_upload', f: f -%>
   <div class="actions">
     <%= f.submit %>
   </div>
